--- a/_layouts/cases.html
+++ b/_layouts/cases.html
@@ -2,15 +2,19 @@
 layout: default
 ---
 
-<article class="post">
+<header>
+  <h1>{{ page.title | escape }}</h1>
+</header>
 
-    <header class="post-header">
-      <h1 class="post-title">{{ page.title | escape }}</h1>
-    </header>
-  
-    <div class="post-content">
-      {{ content }}
-    </div>
-  
-  </article>
+<section>
+    <div>
+      {% for casestudies in site.casestudies reversed %}
+              <figure>
+                  <a href="{{site.baseurl}}/casestudies/{{casestudies.slug}}/" class="{%if page.url contains casestudies.slug %}current{% endif %}"> 
+                  <img src="{{site.baseurl}}/assets/img/{{ casestudies.featured-image }}" alt="{{ casestudies.featured-image-alt }}" />{{casestudies.title}} 
+                  </a>
+              </figure>
+      {% endfor %}
+      </div>
+  </section>
   
