--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,7 +11,7 @@ layout: default
 <section>
     <div>
         <h2>Experience</h2>
-    <div>                
+    </div>                
     <div>
         {% for experience in site.experience reversed %}
         <h3> {{ experience.name }} </h3>
@@ -24,7 +24,7 @@ layout: default
 <section>
     <div>
         <h2>Education</h2>
-    <div>                
+    </div>                
     <div>
         {% for education in site.education reversed %}
         <h3> {{ education.course}}, {{education.level }} </h3>
