--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,19 @@
-<div>
-   {%- if site.title -%}
-      <a href= "/projecto/" title="Marta Duarte - Product Designer" > {{ site.title | escape }} </a>
-   {%- endif -%}
-</div>
-<div>
-{%- if site.description -%}
-      {{ site.description | escape }}
-   {%- endif -%}
-</div>
-<div>
+<header>
+   <div>
+         {%- if site.title -%}
+            <a href= "/projecto/" title="Marta Duarte - Product Designer" > {{ site.title | escape }} </a>
+         {%- endif -%}
+
+         {%- if site.description -%}
+            <p class="teste">{{ site.description | escape }}</p>
+         {%- endif -%}
+   </div>
+   
    <nav>
       <ul>
-        {% for item in site.data.navigation.nav %}
-           <li><a href="{{ item.url }}">{{ item.title }}</a></li>
-        {% endfor %}
-     </ul>
-  </nav>
-</div>
+         {% for item in site.data.navigation.nav %}
+            <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+         {% endfor %}
+      </ul>
+   </nav>
+</header>
