--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,20 @@
   {%- include head.html -%}
 
   <body>
+    
+      {%- include header.html -%}
+   
 
-    {%- include header.html -%}
     
     <main>
-      <div>
+      <div class="content-wrapper">
         {{ content }}
       </div>
     </main>
 
+    <footer>
     {%- include footer.html -%}
-
+    </footer>
   </body>
 
 </html>
