--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,4 +2,5 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "minima";
+@import "styles";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap');
