case details not working

--- a/_layouts/casedetail.html
+++ b/_layouts/casedetail.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section>
+<section class="top-cases">
     <div>
         <h1> {{page.title}} </h1>
         <h2> {{page.description}} </h2>
@@ -10,7 +10,7 @@ layout: default
     <figure>
         <img src="{{site.baseurl}}/assets/img/{{ page.featured-image }}" alt="{{ page.featured-image-alt }}" />
     </figure>
-    <div>
+    <div class="details">
         <p> <strong>Role, </strong>{{page.role}} </p>
         <p> <strong>Context, </strong> {{page.context}} </p>
         <p> <strong>Year, </strong> {{page.year}} </p>
