--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
         <p>As a curious and enthusiastic product designer, I like to put all my energy into building complete digital experiences, identifying problems and finding user centred solutions, all while being surrounded by a great team.</p>
       </div>
     </section>
-    <section class="content-wrapper"> 
+    <section> 
       <div>
         {% for casestudies in site.casestudies limit:2 %}
                 <div class="featured">
