--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,34 +2,43 @@
 layout: default
 ---
 
-<section>
-    <h1>Product Designer</h1>
-    <p>As a curious and enthusiastic product designer based in Lisbon, I like to put all my energy into building complete digital experiences, identifying problems, finding user centred solutions and present them as functional but beautiful layouts, all while being surrounded by a great team. 
-    </p>
+<section class="top-greeting">
+    <figure>
+        <img src="{{site.baseurl}}/assets/img/marta.jpg" alt="Marta Duarte, Product Designer">
+    </figure>
+    <div>
+        <h1>Marta Duarte</h1>
+        <p>As a curious and enthusiastic product designer based in Lisbon, I like to put all my energy into building complete digital experiences, identifying problems, finding user centred solutions and present them as functional but beautiful layouts, all while being surrounded by a great team. 
+        </p>
+    </div>
 </section>
 
-<section>
+<section class="about">
     <div>
         <h2>Experience</h2>
     </div>                
     <div>
         {% for experience in site.experience reversed %}
-        <h3> {{ experience.name }} </h3>
-        <date> {{ experience.start}} - {{ experience.end }} </date>
-        <p> {{ experience.description }} </p>
+        <div class="block">
+            <date> {{ experience.start}} - {{ experience.end }} </date>
+            <h3> {{ experience.name }} </h3>
+            <p> {{ experience.description }} </p>
+        </div>
         {% endfor %}
     </div>
 </section>
 
-<section>
+<section class="about">
     <div>
         <h2>Education</h2>
     </div>                
     <div>
         {% for education in site.education reversed %}
-        <h3> {{ education.course}}, {{education.level }} </h3>
-        <date> {{ education.start}} - {{ education.end }} </date>
-        <p> {{ education.institution }} </p>
+        <div class="block">
+            <date> {{ education.start}} - {{ education.end }} </date>
+            <h3> {{ education.course}}, {{education.level }} </h3>
+            <p> {{ education.institution }} </p>
+        </div>
         {% endfor %}
     </div>
 </section>
