--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
          {%- endif -%}
 
          {%- if site.description -%}
-            <p class="teste">{{ site.description | escape }}</p>
+            <p>{{ site.description | escape }}</p>
          {%- endif -%}
    </div>
    
