--- a/_layouts/cases.html
+++ b/_layouts/cases.html
@@ -1,22 +1,20 @@
 ---
 layout: default
 ---
+ 
 
-
-
-<section>
-  
-  <h2 class="page-title">Explore my work</h2>
-  <div class="cases-wrapper">
-    {% for casestudies in site.casestudies reversed %}
-      <figure>
-        <a href="{{site.baseurl}}/casestudies/{{casestudies.slug}}/" class="{%if page.url contains casestudies.slug %}current{% endif %}"> 
-        <img src="{{site.baseurl}}/assets/img/{{ casestudies.featured-image }}" alt="{{ casestudies.featured-image-alt }}" />
-        <h3>{{casestudies.title}} →</h3>
-        </a>
-      </figure>
-    {% endfor %}
-  </div>
-
-</section>
-  
+<div class="content-wrapper">
+  <section>
+    <h2 class="page-title">Explore my work</h2>
+    <div class="cases-wrapper2">
+      {% for casestudies in site.casestudies reversed %}
+        <figure>
+          <a href="{{site.baseurl}}/casestudies/{{casestudies.slug}}/" class="{%if page.url contains casestudies.slug %}current{% endif %}"> 
+          <img src="{{site.baseurl}}/assets/img/{{ casestudies.featured-image }}" alt="{{ casestudies.featured-image-alt }}" />
+          <h3>{{casestudies.title}} →</h3>
+          </a>
+        </figure>
+      {% endfor %}
+    </div>
+  </section>
+</div>  
