--- a/_layouts/contacts.html
+++ b/_layouts/contacts.html
@@ -1,12 +1,21 @@
 ---
 layout: default
 ---
-
-<section>
-    <h2>Do you wanna talk? There are many ways to reach me.</h2>
-    <h3>Drop me a message at <a href="marta.fvduarte@gmail.com">marta.fvduarte@gmail.com</a>.</h3>
-    <h3>or find me on social media:</h3>
-    <div>
-        {%- include social.html -%}
-    </div>
-</section>
+<div class="content-wrapper">
+    <section class="contacts">
+        <div>
+            <h1>Do you wanna talk?</h1>
+            <h2>There are many ways to reach me.</h2>
+        </div>
+    </section>
+    <section class="section-wrapper">
+        <div class="social">
+            <h3>Drop me a message at <a href="mailto:marta.fvduarte@gmail.com?subject=I've just seen your website">marta.fvduarte@gmail.com</a>
+            </h3>
+            <h3>or find me on social media:</h3>
+            <div>
+                {%- include social.html -%}
+            </div>
+        </div>
+    </section>
+</div>
