--- a/_includes/icon-instagram.html
+++ b/_includes/icon-instagram.html
@@ -1,3 +1,3 @@
-<a href="https://behance.net/{{ include.username }}">
+<a href="https://instagram.net/{{ include.username }}">
     {% include icon-behance.svg %}{{ include.username }}
 </a>
