--- a/_layouts/contacts.html
+++ b/_layouts/contacts.html
@@ -10,9 +10,7 @@ layout: default
     </section>
     <section class="section-wrapper">
         <div class="social">
-            <h3>Drop me a message at <a href="mailto:marta.fvduarte@gmail.com?subject=I've just seen your website">marta.fvduarte@gmail.com</a>
-            </h3>
-            <h3>or find me on social media:</h3>
+            <h3>Drop me a message at <a href="mailto:marta.fvduarte@gmail.com?subject=I've just seen your website">marta.fvduarte@gmail.com</a> or find me on social media:</h3>
             <div>
                 {%- include social.html -%}
             </div>
