--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: default
           </a>
           <p>{{casestudies.description}}</p> 
           <a href="{{site.baseurl}}/casestudies/{{casestudies.slug}}/" class="{%if page.url contains casestudies.slug %}current{% endif %}">
-            <p>Read more →</p>
+            <h4>Read more →</h4>
           </a>
         </div>
       </div>
