--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -39,23 +39,23 @@ p {
 
 h1 {
   color: $main-color;
-  font-size: 40px;
+  font-size: 32px;
   font-weight: 600;
-  line-height: 48px;
+  line-height: 40px;
   padding-bottom: 20px;
 }
 
 h2 {
-  font-size: 28px;
-  line-height: 34px;
+  font-size: 20px;
+  line-height: 28px;
   padding-bottom: 10px;
   font-weight: 400;
   color: $dark;
 }
 
 h3 {
-  font-size: 22px;
-  line-height: 28px;
+  font-size: 20px;
+  line-height: 26px;
   font-weight: 400;
   padding-bottom: 10px;
   color: $dark;
@@ -73,7 +73,7 @@ h5 {
   padding-top: 10px;
 }
 
-a {
+a:link {
   text-decoration: none
 }
 
@@ -111,343 +111,4 @@ figcaption {
   @include page-title;
 }
 
-
-
-/**
- * Header
- */
-
-
- header {
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.7);
-  padding: 2% 6%; 
-  position: fixed;
-  display: flex;
-  box-sizing: border-box;
-  align-items: center;
-  justify-content: space-between;
-  z-index: 1000;
-    div {
-      width: 60%;
-      a {
-        font-size: 28px;
-        letter-spacing: 8px;
-        color: $dark;
-      }
-      p {
-        color: $light-grey;
-      }
-    }
-    &
-    nav {
-      width: 40%;
-      ul {
-        display: flex;
-        box-sizing: border-box;
-        justify-content: space-between;
-        flex-wrap: no-wrap;
-        list-style-type: none;
-        li {
-          display: block;
-          white-space: nowrap;
-          a {
-            color: $dark;
-            font-size: 28px;
-          }
-        }
-      }
-    }
-  }
-
-
-/**
- * Footer
- */
-
- footer {
-  background: $dark;
-  width: 100%;
-  margin-top: 5%;
-  ul {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    list-style-type: none;
-    margin: 2% 4%;
-    li {
-      @include smalltext;
-      color: $white;
-      a {
-        color: $white;
-      }
-    }
-  }
-}
-
-
-/**
- * Homepage Featured Images
- */
-
-
- .greeting {
-   padding-bottom: 60px;
-  p {
-    color: grey;
-    font-size: 28px;
-    line-height: 32px;
-  }
-}
-
-.featured {
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-align-items: center;
-padding: 0 0 20px 0;
-
-  .image-container {
-  @include image-container;
-  justify-content: space-between;
-  box-sizing: border-box;
-  align-items: center;
-  height: 320px;
-  display: block;
-  overflow: hidden;
-
-    img:hover {
-      -webkit-transition: all 1s ease;
-      -moz-transition: all 1s ease;
-      -ms-transition: all 1s ease;
-      transition: all 1s ease;
-      transform: scale(1.05);
-    }
-  }
-
-  &
-  .text-container {
-    width: 100%;
-    padding: 0 0 0 5%;
-      a {
-        p {
-          color: $main-color;
-          font-weight: 500;
-          padding-top: 20px;
-        }
-      }
-    }
-
-}
-
-
-
-/**
-* Work
-*/
-
-
-.cases-wrapper {
-width: 100%;
-display: flex;
-flex-wrap: wrap;
-  figure {
-  width: 50%;
-  height: 100%;
-  padding: 4% 2%;
-  min-width: 280px;
-  justify-content: space-between;
-  box-sizing: border-box;
-    h3 {
-      margin-top: 20px;
-    }
-  }
-}
-
-
-.cases-wrapper2 {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: auto;
-  grid-template-areas: "figure figure";
-  column-gap: 5%;
-    figure {
-      h3 {
-        padding: 20px 0 40px 0;
-      }
-    }
-  }
-  
-
-
-/**
-* Project Detail
-*/
-
-.top-cases {
-  padding-bottom: 40px;
-  figure {
-    padding: 20px 0;
-  }
-  &
-  .details { 
-    text-align: right;
-  }
-}
-
-.section-wrapper {
-  padding: 20px 0;
-  .block {
-    padding: 20px 0;
-    width: 80%;
-    h2 {
-      color: $main-color;
-    }
-    div {
-      padding: 20px 0 0 80px;
-      div {
-        padding: 10px 0 30px 0;
-      }
-    }
-    ul {
-      padding-left: 20px;
-      list-style: square;
-      p {
-        color: $light-grey;
-        font-size: 14px;
-        line-height: 18px;
-        padding: 5px 0;
-      }
-      .personas {
-        display: flex;
-        align-items: center;
-        div {
-          width: 100%;
-          padding-left: 40px;
-        }
-      }
-      .quotes {
-          padding: 30px 0 20px 40px;
-          list-style: none;
-          q {
-            color: $main-color;
-            font-size: 22px;
-            line-height: 30px;
-          }
-      }
-    }
-    ol {
-      @extend ul;
-      list-style: decimal;
-    }
-  }
-}
-
-
-.section-wrapper {
-  padding: 20px 0;
-}
-
-
-
-
-
-
-
-/**
-* About
-*/
-
-
-.about {
-  padding: 20px 0;
-  h2 {
-    font-weight: 600;
-    color: $main-color;
-  }
-  .block {
-    width: 60%;
-    padding: 10px 0;
-    h3 {
-      font-weight: 600;
-      padding: 5px 0;;
-    }
-    date {
-      color: $light-grey;
-    }
-    p {
-      color: $light-grey;
-    }
-  }
-}
-
-.top-greeting {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 80px;
-  figure {
-    @include image-container;
-  }
-  div {
-    padding: 40px;
-  }
-}
-
-
-/**
-* Contacts
-*/
-
-.contacts {
-	display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  flex-wrap: wrap;
-  padding-bottom: 40px;
-}
-
-
-/**
-* Social
-*/
-
-.social {
-  list-style: none;
-  padding-top: 40px;
-  h4 {
-    padding: 40px 0 20px 0;
-  }
-  h3 {
-    padding-bottom: 15px;
-    a {
-      text-decoration: none;
-      color: $light-grey;
-    }
-    a:hover {
-      color: $main-color;
-    }
-  }
-  div {
-    ul {
-      list-style: none;
-      li {
-        padding: 5px 0;
-        a {
-          display: flex;
-          fill: $main-color;
-          
-          div {
-            padding-right: 10px;
-          }
-        }
-        a:hover {
-          color: $main-color;
-          fill: $dark-yellow; 
-        }
-      }
-    }
-  }
-}
 
